--- a/puntos_extras.ipynb
+++ b/puntos_extras.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'c:\\Users\\Sharis Barrios\\AppData\\Local\\Microsoft\\WindowsApps\\python3.9.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/Sharis Barrios/AppData/Local/Microsoft/WindowsApps/python3.9.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "\n",
@@ -44,13 +55,20 @@
     "\n",
     "# Obtener el centro del grafo\n",
     "center = fw.calculate_graph_center()\n",
-    "print(\"El centro del grafo es el nodo:\", center)\n"
+    "print(\"El centro del grafo es el nodo:\", center)\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
